Failure test classes and modified classes

--- a/src/main/metadata-au/classes/AccountHelperTest.cls
+++ b/src/main/metadata-au/classes/AccountHelperTest.cls
@@ -47,10 +47,12 @@ public class AccountHelperTest
        AccountHelper.flagPrimaryContact(companyIds);
        AccountHelper.cancelPrimaryContact(dealerIds2, companyIds);
        personAcc.Partner_Surname__c = 'galaxy2';
+       personAcc.company__c = '001q000000bvJvC';
        update personAcc;
        Account TestAcc = AccountHelper.updateDisplayName(personAcc);
        //system.assertNotEquals(TestAcc.Display_Name__c, 'Unknown First Name galaxy1');
        personAcc.Partner_Surname__c = 'galaxy1';
+       
        update personAcc;
        
        personAcc.Salutation = 'Sir';
@@ -350,7 +352,7 @@ public class AccountHelperTest
         testLead = new Lead__c();
         //testLead.Need_Assign_To_Dealer__c = 'Need';
         testLead.Contact__c = personAcc.id;
-        testLead.RecordTypeId = Schema.SObjectType.Lead__c.getRecordTypeInfosByName().get('Service/Parts Lead').getRecordTypeId();
+        testLead.RecordTypeId = Schema.SObjectType.Lead__c.getRecordTypeInfosByName().get('Service Lead').getRecordTypeId();
         testLead.Lead_Type__c = 'New Car';
         testLead.Relation_With_The_Leads__c = 'I owner';
         testLead.Purchase_Time__c = '0 - 3 months';
